--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
 
     <div class="card">
-
+      <div id="questionCounter"></div>
       <h2 id="questionText"></h2>
       <div class="input"></div>
       <input type="text" id="answerInput" placeholder="Type your answer">
@@ -26,6 +26,10 @@
     </div>
 
     <div id="finalScore" class="hidden"></div>
+
+    <a href="home.html">
+      <button id="homeBtn" class="hidden homeBtn">Go Home</button>
+    </a>
 
   </div>
 
