final home and login

--- a/login.html
+++ b/login.html
@@ -8,7 +8,13 @@
   </head>
   <body>
     <div class="container">
-      <p>BEEP</p>
+      <div class="logo">
+        <img src="images/BEEPlogo.png"" />
+      </div>
+
+       <div class="mascot">
+        <img class="image" src="images/mascot.png" />
+      </div>
 
       <div class="startbutton">
         <a href="home.html" class="start-button">START</a>
