added go home button

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
       </div>
 
       <div id="finalScore" class="hidden"></div>
+      <a href="home.html">
+  <button id="homeBtn" class="hidden">Go Home</button>
+</a>
     </div>
 
     <script src="script.js"></script>
