--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
       <div class="content-wrapper">
         <!-- Side Icons -->
         <div class="side-icons">
-          <div class="icon-circle icon-active">★</div>
+          <a class="icon-circle icon-active" href="compute.html">★</a>
           <div class="icon-circle">★</div>
           <div class="icon-circle">⚠</div>
           <div class="icon-circle">★</div>
