--- a/index.html
+++ b/index.html
@@ -2,28 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Math Quiz</title>
-    <link rel="stylesheet" href="styles.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>BEEP</title>
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <div class="app">
-      <div class="progress-bar">
-        <div id="progress"></div>
+    <div class="container">
+      <div class="logo">
+        <img src="images/BEEPlogo.png"" />
       </div>
 
-      <div class="card">
-        <h2 id="questionText"></h2>
-        <div class="input"></div>
-        <input type="text" id="answerInput" placeholder="Type your answer" />
-
-        <div id="feedback"></div>
-
-        <button id="checkBtn">Check</button>
+       <div class="mascot">
+        <img class="image" src="images/mascot.png" />
       </div>
 
-      <div id="finalScore" class="hidden"></div>
+      <div class="startbutton">
+        <a href="home.html" class="start-button">START</a>
+      </div>
     </div>
-
-    <script src="script.js"></script>
   </body>
 </html>
